test_suite5/ALAN/test_suite/alan-2022-examples/failing/003900_mutation.alan
source i1 begin integer while 24 do relax end end
